// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetsClient getAssetsObject method Should fetch assets with cache: a6 - assets 1`] = `
{
  "collectionInfo": CollectionInfo {
    "collectionName": "Collection 1",
    "traitsOrder": [
      "Background",
    ],
  },
  "traits": [
    Trait {
      "name": "Background",
      "variations": [
        Variation {
          "colors": [
            "Black",
            "Blue",
            "Brown",
            "Green",
          ],
          "name": "Single Color",
        },
        Variation {
          "name": "Custom 1",
        },
      ],
    },
  ],
}
`;

exports[`AssetsClient getAssetsObject method Should fetch assets: a5 - assets 1`] = `
{
  "collectionInfo": CollectionInfo {
    "collectionName": "Collection 1",
    "traitsOrder": [
      "Background",
    ],
  },
  "traits": [
    Trait {
      "name": "Background",
      "variations": [
        Variation {
          "colors": [
            "Black",
            "Blue",
            "Brown",
            "Green",
          ],
          "name": "Single Color",
        },
        Variation {
          "name": "Custom 1",
        },
      ],
    },
  ],
}
`;

exports[`AssetsClient getCollectionInfo method Should fetch collectionInfo with cache: a2 - collectionInfo 1`] = `
CollectionInfo {
  "collectionName": "Collection 1",
  "traitsOrder": [
    "Background",
  ],
}
`;

exports[`AssetsClient getCollectionInfo method Should fetch collectionInfo: a1 - collectionInfo 1`] = `
CollectionInfo {
  "collectionName": "Collection 1",
  "traitsOrder": [
    "Background",
  ],
}
`;

exports[`AssetsClient getTraits method Should fetch traits with cache: a4 - traits 1`] = `
[
  Trait {
    "name": "Background",
    "variations": [
      Variation {
        "colors": [
          "Black",
          "Blue",
          "Brown",
          "Green",
        ],
        "name": "Single Color",
      },
      Variation {
        "name": "Custom 1",
      },
    ],
  },
]
`;

exports[`AssetsClient getTraits method Should fetch traits: a3 - traits 1`] = `
[
  Trait {
    "name": "Background",
    "variations": [
      Variation {
        "colors": [
          "Black",
          "Blue",
          "Brown",
          "Green",
        ],
        "name": "Single Color",
      },
      Variation {
        "name": "Custom 1",
      },
    ],
  },
]
`;
